# ddnspy

./: .gitignore  Dockerfile  README.md  ddns.py  pyproject.toml  requirements.txt
.github/workflows/: docker.yml
ddnspy/: __init__.py  ddns.py  dns.py
ddnspy/providers/: __init__.py  cf.py
tests/: test_ddnspy.py
