[tool.poetry]
name = "ddnspy"
version = "0.1.0"
description = ""
authors = ["luander <iam@luander.net>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
cloudflare = "^2.9.12"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
